# word-count

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  main.rs
tests/: char.rs  line.rs
